# OpenGlSandBox

./: .gitignore  CMakeLists.txt
shaders/: frag_shader.glsl  frag_shader_yellow.glsl  fragment.glsl  fragment_light.glsl  vertex.glsl  vertex_light.glsl  vertex_shader.glsl
src/: main.cpp
src/Render/: Camera.cpp  Camera.hpp  Shader.cpp  Shader.hpp
src/utils/: EBO.cpp  EBO.hpp  Texture.cpp  Texture.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
